# umfeld-examples

./: .gitignore  README.md
Advanced/application-bundle-macOS/: CMakeLists.txt  application.cpp
Advanced/application-bundle-macOS/Resources/: Umfeld.icns
Advanced/camera/: application.cpp
Advanced/capture/: CMakeLists.txt  application.cpp
Advanced/gamepads/: application.cpp
Advanced/graphics-terminal/: application.cpp
Advanced/offscreen/: application.cpp
Advanced/texture-filtering/: application.cpp
Advanced/vertexbuffer/: application.cpp
Audio/audio-device/: CMakeLists.txt  application.cpp
Audio/fft-analysis/: application.cpp
Audio/midi-input/: application.cpp
Audio/oscillator-adsr/: application.cpp
Audio/passthrough/: CMakeLists.txt  application.cpp
Audio/sampler/: application.cpp
Audio/sampler-per-sample/: CMakeLists.txt  application.cpp
Audio/threaded/: CMakeLists.txt
Audio/trigger/: application.cpp
Audio/trigger-listener/: application.cpp
Basics/3D-primitives/: application.cpp
Basics/lights/: application.cpp
Basics/load-OBJ/: application.cpp
Basics/load-image/: application.cpp
Basics/minimal/: application.cpp
Basics/pixels/: application.cpp
Basics/save-frame/: application.cpp
Basics/shapes/: application.cpp
Basics/shapes-stroke-and-fill/: application.cpp
Basics/typography/: application.cpp
Processing/Basics/Color/ColorVariables/: application.cpp
Processing/Basics/Color/Relativity/: application.cpp
Processing/Basics/Input/KeyboardFunctions/: application.cpp
Processing/Topics/Cellular Automata/GameOfLife/: application.cpp
Processing/Topics/GUI/Button/: application.cpp
Processing/Topics/GUI/Rollover/: application.cpp
Processing/Topics/Motion/CubesWithinCube/: Cube.h
Research/audiofile/: application.cpp
Research/barycentric-wireframe-shader/: application.cpp
Research/drawing-filled-arcs/: CMakeLists.txt  application.cpp
Research/drawing-in-mouse-pressed/: CMakeLists.txt  application.cpp
Research/line-geometry-shader/: application.cpp
Research/microui/: CMakeLists.txt  application.cpp  microui.h
Research/profiling-opengl-pipeline/: CMakeLists.txt  application.cpp
test/: test-examples.sh
